# twir-deploy-notify

./: .gitignore  .gitmessage  .rustfmt.toml  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DEVLOG.md  LICENSE  LICENSE_QQRM_LAPOCHKA  PARSING.md  README.md  REPO_AGENTS.md  RESTART.md  ROADMAP.md  build.rs  last_sent.txt
.github/: dependabot.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: audit.yml  automerge.yml  cancel.yml  cleanup.yml  codex-cleanup.yml  common-delivery.yml  dependabot-automerge.yml  deploy.yml  dev.yml  drop-history.yml  fixture-verify.yml  integration-tests.yml  integration.yml  prod.yml  prune.yml  release.yml  retro.yml  test.yml  update-rust-toolchain.yml
DOCS/: ARCHITECTURE.md  AVATAR.md  RESTART.md  ROADMAP.md  RUST_VERSION.md
build_modules/: generator.rs  parser.rs  validator.rs
scripts/: update_rust_toolchain.py  update_rust_toolchain.sh
src/: cli.rs  generator.rs  generator_shared.rs  lib.rs  main.rs  parser.rs  posts.rs  validator.rs
src/shared/: generator_shared.rs  mod.rs  parser.rs  validator.rs
tests/: 2025-06-25-this-week-in-rust.md  2025-07-05-call-for-participation.md  2025-07-05-this-week-in-rust.md  cfp_regression.rs  common.rs  complex.md  dash_regression.rs  dash_regression2.rs  dash_word.rs  formatting.rs  generator.rs  github_mentions.rs  golden.rs  integration.rs  integration_test.rs  parser.rs  regression_table.md  telegram_e2e.rs
tests/common/: mod.rs
tests/expected/: 606_1.md  606_10.md  606_11.md  606_2.md  606_3.md  606_4.md  606_5.md  606_6.md  606_7.md  606_8.md  607_1.md  607_10.md  607_11.md  607_2.md  607_3.md  607_4.md  607_5.md  607_6.md  607_7.md  607_8.md  607_9.md  cfp1.md  cfp2.md  complex1.md  complex2.md  complex3.md  complex4.md  complex5.md  expected1.md  expected10.md  expected11.md  expected12.md  expected13.md  expected2.md  expected3.md  expected4.md  expected5.md  expected6.md  expected7.md  expected8.md  (+1 more)
tests/golden/2025-06-25-this-week-in-rust/: output_2.md  output_4.md  output_5.md  output_6.md
tests/golden/2025-07-02-this-week-in-rust/: output_2.md  output_4.md  output_5.md
tests/golden/2025-10-22-this-week-in-rust/: output_1.md  output_2.md  output_3.md  output_4.md  output_5.md  output_6.md  output_7.md
tests/support/: golden.rs
