[package]
name = "twir-deploy-notify"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
regex = "1"
pulldown-cmark = "0.9"
teloxide = { version = "0.12", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
mockito = "1"
proptest = "1"

[features]
integration = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "check-docs"
path = "src/bin/check_docs.rs"
