[package]
name = "twir-deploy-notify"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-QQRM-LAPOCHKA"
license-file = "LICENSE_QQRM_LAPOCHKA"

[dependencies]
regex = "1"
pulldown-cmark = "0.9"
teloxide = { version = "0.12", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"
proptest = "1"
once_cell = "1"

[features]
integration = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "check-docs"
path = "src/bin/check_docs.rs"

[[bin]]
name = "verify-posts"
path = "src/bin/verify_posts.rs"

[profile.dev]
opt-level = 0
incremental = true

[profile.test]
opt-level = 0
incremental = true

[profile.release]
opt-level = 1
incremental = true
codegen-units = 16
